# CircuitExplorer

./: .gitignore  .gitmodules  .gitsubprojects  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md
common/: commonTypes.h  log.h  types.h
core/: CMakeLists.txt
core/common/: CommonTypes.h  Defines.h.in  Logs.h  Types.h  Utils.cpp  Utils.h
core/module/ispc/camera/: DOFPerspectiveCamera.cpp  DOFPerspectiveCamera.h  DOFPerspectiveCamera.ispc  SphereClippingPerspectiveCamera.cpp  SphereClippingPerspectiveCamera.h  SphereClippingPerspectiveCamera.ispc  utils.ih  utils.ispc
core/module/ispc/render/: CellGrowthRenderer.ispc  CircuitExplorerAdvancedRenderer.cpp  CircuitExplorerAdvancedRenderer.h  CircuitExplorerAdvancedRenderer.ispc  CircuitExplorerBasicRenderer.cpp  CircuitExplorerBasicRenderer.ispc  CircuitExplorerMaterial.cpp  CircuitExplorerMaterial.h  CircuitExplorerMaterial.ih  CircuitExplorerMaterial.ispc  DefaultMaterial.cpp  DefaultMaterial.h  DefaultMaterial.ih  ProximityDetectionRenderer.h  ProximityDetectionRenderer.ispc  VoxelizedSimulationRenderer.h  VoxelizedSimulationRenderer.ispc
core/module/ispc/render/utils/: CircuitExplorerAbstractRenderer.cpp  CircuitExplorerAbstractRenderer.h  CircuitExplorerSimulationRenderer.cpp  CircuitExplorerSimulationRenderer.h  CircuitExplorerSimulationRenderer.ih  Consts.ih  SkyBox.ih  SkyBox.ispc
core/plugin/: CircuitExplorerPlugin.cpp  CircuitExplorerPlugin.h
core/plugin/api/: CircuitExplorerParams.cpp  CircuitExplorerParams.h
core/plugin/io/: AbstractCircuitLoader.cpp  AbstractCircuitLoader.h  AdvancedCircuitLoader.cpp  AdvancedCircuitLoader.h  AstrocyteLoader.cpp  AstrocyteLoader.h  BrickLoader.cpp  BrickLoader.h  CellGrowthHandler.h  MeshCircuitLoader.cpp  MeshCircuitLoader.h  MorphologyCollageLoader.cpp  MorphologyCollageLoader.h  MorphologyLoader.cpp  MorphologyLoader.h  PairSynapsesLoader.cpp  PairSynapsesLoader.h  SpikeSimulationHandler.cpp  SpikeSimulationHandler.h  SynapseCircuitLoader.cpp  SynapseCircuitLoader.h  SynapseJSONLoader.cpp  SynapseJSONLoader.h  Utils.cpp  Utils.h  VoltageSimulationHandler.cpp  VoltageSimulationHandler.h
core/plugin/io/db/: DBConnector.cpp  DBConnector.h
core/plugin/io/filesystem/: BrickLoader.cpp  BrickLoader.h
core/plugin/io/handlers/: CellGrowthHandler.cpp  CellGrowthHandler.h  SpikeSimulationHandler.cpp  SpikeSimulationHandler.h  VasculatureHandler.cpp  VasculatureHandler.h  VoltageSimulationHandler.cpp  VoltageSimulationHandler.h
core/plugin/io/loaders/: AbstractCircuitLoader.cpp  AbstractCircuitLoader.h  AdvancedCircuitLoader.cpp  AdvancedCircuitLoader.h  AstrocyteLoader.cpp  AstrocyteLoader.h  BrickLoader.cpp  BrickLoader.h  MeshCircuitLoader.cpp  MeshCircuitLoader.h  MorphologyCollageLoader.cpp  MorphologyCollageLoader.h  MorphologyLoader.cpp  MorphologyLoader.h  PairSynapsesLoader.cpp  PairSynapsesLoader.h  SynapseCircuitLoader.cpp  SynapseCircuitLoader.h  SynapseJSONLoader.cpp  SynapseJSONLoader.h  VasculatureLoader.cpp  VasculatureLoader.h
core/plugin/meshing/: MetaballsGenerator.cpp  MetaballsGenerator.h  PointCloudMesher.cpp  PointCloudMesher.h
core/plugin/neuroscience/astrocyte/: AstrocyteLoader.cpp  AstrocyteLoader.h
core/plugin/neuroscience/common/: MorphologyLoader.cpp  MorphologyLoader.h  ParallelModelContainer.cpp  ParallelModelContainer.h  Types.h
core/plugin/neuroscience/neuron/: AbstractCircuitLoader.cpp  AbstractCircuitLoader.h  AdvancedCircuitLoader.cpp  AdvancedCircuitLoader.h  CellGrowthHandler.cpp  CellGrowthHandler.h  MeshCircuitLoader.cpp  MeshCircuitLoader.h  MorphologyCollageLoader.cpp  MorphologyCollageLoader.h  PairSynapsesLoader.cpp  PairSynapsesLoader.h  SpikeSimulationHandler.cpp  SpikeSimulationHandler.h  SynapseCircuitLoader.cpp  SynapseCircuitLoader.h  VoltageSimulationHandler.cpp  VoltageSimulationHandler.h
core/plugin/neuroscience/vasculature/: VasculatureHandler.cpp  VasculatureHandler.h  VasculatureLoader.cpp  VasculatureLoader.h
module/ispc/camera/: DOFPerspectiveCamera.ispc  SphereClippingPerspectiveCamera.cpp  SphereClippingPerspectiveCamera.h  SphereClippingPerspectiveCamera.ispc  utils.ispc
module/ispc/render/: CellGrowthRenderer.cpp  CellGrowthRenderer.h  CellGrowthRenderer.ispc  CircuitExplorerAdvancedRenderer.cpp  CircuitExplorerBasicRenderer.h  CircuitExplorerBasicRenderer.ispc  CircuitExplorerMaterial.cpp  CircuitExplorerMaterial.h  CircuitExplorerMaterial.ih  DefaultMaterial.cpp  DefaultMaterial.h  DefaultMaterial.ih  DefaultMaterial.ispc  ProximityDetectionRenderer.cpp  VoxelizedSimulationRenderer.cpp  VoxelizedSimulationRenderer.h
module/ispc/render/utils/: SkyBox.ispc  (+5 more)
plugin/: CircuitExplorerPlugin.cpp  CircuitExplorerPlugin.h
plugin/api/: CircuitExplorerParams.cpp  CircuitExplorerParams.h
plugin/io/: AbstractCircuitLoader.cpp  AbstractCircuitLoader.h  AdvancedCircuitLoader.cpp  AdvancedCircuitLoader.h  AstrocyteLoader.cpp  AstrocyteLoader.h  BrickLoader.cpp  BrickLoader.h  CellGrowthHandler.cpp  MeshCircuitLoader.cpp  MeshCircuitLoader.h  MorphologyCollageLoader.cpp  MorphologyCollageLoader.h  MorphologyLoader.cpp  MorphologyLoader.h  PairSynapsesLoader.cpp  PairSynapsesLoader.h  SpikeSimulationHandler.cpp  SpikeSimulationHandler.h  SynapseCircuitLoader.cpp  SynapseCircuitLoader.h  SynapseJSONLoader.cpp  SynapseJSONLoader.h  Utils.cpp  Utils.h  VoltageSimulationHandler.cpp  VoltageSimulationHandler.h
plugin/meshing/: PointCloudMesher.cpp  PointCloudMesher.h
pythonsdk/: Makefile  README.md  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
pythonsdk/circuitexplorer/: __init__.py  circuit_explorer.py  version.py
pythonsdk/circuitexplorer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pythonsdk/notebooks/: CircuitExplorer_Astrocytes.ipynb  CircuitExplorer_Import_Compartment_Simulation.ipynb  CircuitExplorer_Import_Synapses.ipynb  CircuitExplorer_RatAtlas.ipynb  CircuitExplorer_TestData.ipynb  CircuitExplorer_TestData_Mitochondria.ipynb  CircuitExplorer_TestData_PairSynapses.ipynb  CircuitExplorer_TestData_Synapses.ipynb  CircuitExplorer_Vasculature.ipynb
(+1 files in other folders)
